--- a/SomeGame/main.html
+++ b/SomeGame/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Anna's Game</title>
+    <title>Anna's Game: Find your Friends</title>
     <script src="script/main.js"></script>
 </head>
 <p>Hello World</p>
