player und person class, eventlistener table und bar

--- a/SomeGame/main.html
+++ b/SomeGame/main.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Anna's Game: Find your Friends</title>
     <script src="script/main.js"></script>
+    <script src="script/person.js"></script>
+    <script src="script/player.js"></script>
 </head>
-<p>Hello World</p>
+<div id="playerDiv">
+
+    <div id="stats">Spieler
+        <p>Alkoholspiegel: <span id="healthStat"></span></p>
+        <p>Alkoholreserven: <span id="hpPacks"></span></p>
+        <p>Stärke: <span id="strengthStat"></span></p>
+
+    </div>
+    <button id="nextTableButton">Nächster Tisch</button>
+    <button id="shopButton">Zur Bar gehen</button>
+
+</div>
+<div id="enemyDiv">
+
+</div>
 
 </html>
