eine sorte enemy wird erzeugt und dargetellt

--- a/SomeGame/main.html
+++ b/SomeGame/main.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Anna's Game: Find your Friends</title>
+    <title>Anna's Game: BarFight</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script/main.js"></script>
     <script src="script/person.js"></script>
     <script src="script/player.js"></script>
+    <script src="script/enemy.js"></script>
+    <script src="script/Enemies/junkie.js"></script>
 </head>
 <div id="playerDiv">
 
@@ -20,7 +23,7 @@
     <button id="shopButton">Zur Bar gehen</button>
 
 </div>
-<div id="enemyDiv">
+<div id="barDiv">
 
 </div>
 
