fight enemies: deletes them or get minus health

--- a/SomeGame/main.html
+++ b/SomeGame/main.html
@@ -17,6 +17,7 @@
         <p>Alkoholspiegel: <span id="healthStat"></span></p>
         <p>Alkoholreserven: <span id="hpPacks"></span></p>
         <p>Stärke: <span id="strengthStat"></span></p>
+        <p>Münzen: <span id="coinsStat"></span></p>
 
     </div>
     <button id="nextTableButton">Nächster Tisch</button>
