--- a/SomeGame/main.html
+++ b/SomeGame/main.html
@@ -6,9 +6,14 @@
     <title>Anna's Game: BarFight</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script/main.js"></script>
+    <script src="script/object.js"></script>
+    <script src="script/Weapons/weapon.js"></script>
+    <script src="script/Weapons/bottle.js"></script>
+    <script src="script/Weapons/cigarette.js"></script>
+    <script src="script/Weapons/fist.js"></script>
     <script src="script/person.js"></script>
     <script src="script/player.js"></script>
-    <script src="script/enemy.js"></script>
+    <script src="script/Enemies/enemy.js"></script>
     <script src="script/Enemies/junkie.js"></script>
 </head>
 <div id="playerDiv">
