Object-Superclass, some css

--- a/SomeGame/main.html
+++ b/SomeGame/main.html
@@ -25,12 +25,17 @@
         <p>Münzen: <span id="coinsStat"></span></p>
 
     </div>
+
+    <div id="weaponsDiv">Waffen
+    </div>
+
     <button id="nextTableButton">Nächster Tisch</button>
     <button id="shopButton">Zur Bar gehen</button>
 
 </div>
-<div id="barDiv">
 
+<div id="barDiv">
+    <!-- Enemies go here -->
 </div>
 
 </html>
